# salvage_program

./: .gitignore  DEVELOPMENT_LOG.md  DEVELOPMENT_MEMO.md  ERROR_REFERENCE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml  tests.yml
src/: main.py
src/disk_operations/: __init__.py  disk_manager.py
src/file_operations/: file_handler.py
src/gui/: main_window.py
src/utils/: logger.py
tests/: __init__.py  conftest.py  test_disk_manager.py  test_edge_cases.py  test_file_handler.py  test_integration.py  test_logger.py  test_main.py  test_main_window.py
プロジェクトメモ格納場所/: 要求概要.md
