[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salvage_program"
version = "0.1.0"
description = "WindowsデータサルベージプログラムのLinuxデスクトップアプリケーション"
requires-python = ">=3.8"
dependencies = [
    "PySimpleGUI",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "linux_only: テストはLinux環境でのみ実行されます",
    "windows_only: テストはWindows環境でのみ実行されます",
] 